; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/ble_eddystone/main/extr_esp_eddystone_demo.c_esp_eddystone_appRegister.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/ble_eddystone/main/extr_esp_eddystone_demo.c_esp_eddystone_appRegister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEMO_TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Register callback\00", align 1
@esp_gap_cb = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [23 x i8] c"gap register error: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @esp_eddystone_appRegister() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @DEMO_TAG, align 4
  %3 = call i32 @ESP_LOGI(i32 %2, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %4 = load i32, i32* @esp_gap_cb, align 4
  %5 = call i32 @esp_ble_gap_register_callback(i32 %4)
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* @ESP_OK, align 4
  %7 = icmp ne i32 %5, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %0
  %9 = load i32, i32* @DEMO_TAG, align 4
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @esp_err_to_name(i32 %10)
  %12 = call i32 @ESP_LOGE(i32 %9, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i32 %11)
  br label %13

13:                                               ; preds = %8, %0
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*) #1

declare dso_local i32 @esp_ble_gap_register_callback(i32) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, i32) #1

declare dso_local i32 @esp_err_to_name(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
